--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,6 +22,9 @@ jobs:
          run: |
           echo "Event Name ${{ github.event_name }}"
           echo "Branch Name ${{ github.ref }}"
+          
+       - name: List files
+         run: tree
        
        
        
