--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -1,8 +1,8 @@
 name: CI Build for Docker Action
 on:
-  push:
-    branches: [ main ]
-    paths: [ hello-world-docker-action/** ]
+  # push:
+  #   branches: [ main ]
+  #   paths: [ hello-world-docker-action/** ]
   workflow_dispatch:
 
 jobs:
@@ -16,7 +16,7 @@ jobs:
         id: hello-action
         uses: ./hello-world-docker-action
         with:
-          who-to-greet: '@wulfland'
+          who-to-greet: 'Evan'
 
       - name: Output time set in the container
         run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello"
