--- a/hello-world-docker-action/Dockerfile
+++ b/hello-world-docker-action/Dockerfile
@@ -1,6 +1,8 @@
 
 FROM alpine
 
-COPY entrypoint.sh /entrypoint.sh
+CMD ["echo", "Hello WOrld"]
 
-ENTRYPOINT ["/entrypoint.sh"]
+# COPY entrypoint.sh /entrypoint.sh
+
+# ENTRYPOINT ["/entrypoint.sh"]
