--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,7 +3,10 @@ name: GitHub Actions Demo
 on: 
   push:
     branches: ["main"]
-  
+    paths-ignore:
+      - 'README.md'
+      - '.github/*'
+
   pull_request:
   
   schedule: 
