--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Run my own container action
         id: hello-action
         uses: ./hello-world-docker-action
-        with:
-          who-to-greet: 'Evan'
+        # with:
+        #   who-to-greet: 'Evan'
 
       - name: Output time set in the container
         run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello"
