make changes to hello-world-docker

--- a/hello-world-docker-action/Dockerfile
+++ b/hello-world-docker-action/Dockerfile
@@ -3,6 +3,6 @@ FROM alpine
 
 COPY entrypoint.sh /entrypoint.sh
 
-CMD ["echo", "Hello WOrld"]
+# CMD ["echo", "Hello WOrld"]
 
-# ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/entrypoint.sh"]
